Update to Blueprint 5.2.3